fix(main-nav): Ignore mouse events on mobile

--- a/src/styles/globals/navigation/_main-nav.css
+++ b/src/styles/globals/navigation/_main-nav.css
@@ -4,6 +4,7 @@
     --main-nav-left: 0;
     --main-nav-width: 100%;
     --main-nav-height: calc(100dvh - var(--topbar-height));
+    --main-nav-min-width-desktop: 1024;
     --main-nav-padding: var(--spacing-normal) var(--spacing-normal) calc(var(--service-nav-height) + var(--spacing-l)) var(--spacing-normal);
     --main-nav-display: block;
     --main-nav-transform: translateY(calc(-100% - var(--topbar-height)));
